--- a/notebooks/time_series_using_lightGBM_regressor_air_quality1.ipynb
+++ b/notebooks/time_series_using_lightGBM_regressor_air_quality1.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Date: 19-Aug-23\n",
+    "### Time Series data analysis using lightGBM regressor\n",
     "\n",
-    "Learning from: Prasert Kanawattanachai (CBS)\n",
-    "- Youtube: https://www.youtube.com/prasertcbs\n",
-    "- Github: https://github.com/prasertcbs/"
+    "- Dataset: bangkok-air-quality.csv\n",
+    "- Learning Date: 18-Oct-23\n",
+    "- Learning from: Prasert Kanawattanachai (CBS)\n",
+    "    - Youtube: https://www.youtube.com/prasertcbs\n",
+    "    - Github: https://github.com/prasertcbs/"
    ]
   },
   {
@@ -32,7 +34,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x105a98b80>"
+       "<IPython.lib.display.YouTubeVideo at 0x107c4ba60>"
       ]
      },
      "execution_count": 1,
@@ -817,6 +819,47 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "'pm25'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_col = 'pm25'\n",
+    "y_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1680, 7)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -836,8 +879,231 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ds</th>\n",
-       "      <th>y</th>\n",
+       "      <th>date</th>\n",
+       "      <th>pm25</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>o3</th>\n",
+       "      <th>no2</th>\n",
+       "      <th>so2</th>\n",
+       "      <th>co</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1197</th>\n",
+       "      <td>2019-11-14</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464</th>\n",
+       "      <td>2020-08-11</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1226</th>\n",
+       "      <td>2019-12-13</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>2018-07-09</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1515</th>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556</th>\n",
+       "      <td>2018-02-10</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>966</th>\n",
+       "      <td>2019-03-28</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1400</th>\n",
+       "      <td>2020-06-08</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>735</th>\n",
+       "      <td>2018-08-08</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   pm25  pm10    o3   no2  so2  co\n",
+       "547  2018-02-01  114.0  64.0  23.0  15.0  NaN NaN\n",
+       "1197 2019-11-14   81.0  46.0  16.0  15.0  1.0 NaN\n",
+       "1464 2020-08-11   45.0  17.0   4.0   4.0  NaN NaN\n",
+       "1226 2019-12-13  142.0  63.0  13.0  17.0  1.0 NaN\n",
+       "705  2018-07-09   69.0  42.0   9.0  12.0  NaN NaN\n",
+       "1515 2020-10-01   56.0  21.0   7.0  12.0  NaN NaN\n",
+       "556  2018-02-10  138.0  63.0  20.0  16.0  5.0 NaN\n",
+       "966  2019-03-28   78.0  40.0   3.0   7.0  NaN NaN\n",
+       "1400 2020-06-08   34.0  21.0   4.0   5.0  NaN NaN\n",
+       "735  2018-08-08   77.0  40.0   9.0  10.0  NaN NaN"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(subset = [y_col], inplace = True)\n",
+    "df = df.reset_index(drop = True)\n",
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1680, 7)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a function\n",
+    "\n",
+    "def date_parts(data, date_colname = 'date'):\n",
+    "\n",
+    "    ''' \n",
+    "    create year, month, day, and day name columns\n",
+    "    '''\n",
+    "\n",
+    "    data['year'] = data['date'].dt.year\n",
+    "    data['month'] = data['date'].dt.month\n",
+    "    data['day'] = data['date'].dt.day\n",
+    "    data['day_name'] = data['date'].dt.day_name().astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_parts(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>pm25</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>o3</th>\n",
+       "      <th>no2</th>\n",
+       "      <th>so2</th>\n",
+       "      <th>co</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -845,29 +1111,83 @@
        "      <th>0</th>\n",
        "      <td>2016-07-30</td>\n",
        "      <td>61.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-07-31</td>\n",
        "      <td>68.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Sunday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-08-01</td>\n",
        "      <td>60.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-08-02</td>\n",
        "      <td>68.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-08-03</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -875,58 +1195,136 @@
        "      <th>1675</th>\n",
        "      <td>2021-03-10</td>\n",
        "      <td>98.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1676</th>\n",
        "      <td>2021-03-11</td>\n",
        "      <td>111.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1677</th>\n",
        "      <td>2021-03-12</td>\n",
        "      <td>101.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1678</th>\n",
        "      <td>2021-03-13</td>\n",
        "      <td>96.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1679</th>\n",
        "      <td>2021-03-14</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Sunday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1680 rows × 2 columns</p>\n",
+       "<p>1680 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             ds      y\n",
-       "0    2016-07-30   61.0\n",
-       "1    2016-07-31   68.0\n",
-       "2    2016-08-01   60.0\n",
-       "3    2016-08-02   68.0\n",
-       "4    2016-08-03   70.0\n",
-       "...         ...    ...\n",
-       "1675 2021-03-10   98.0\n",
-       "1676 2021-03-11  111.0\n",
-       "1677 2021-03-12  101.0\n",
-       "1678 2021-03-13   96.0\n",
-       "1679 2021-03-14   70.0\n",
+       "           date   pm25  pm10    o3   no2  so2   co  year  month  day  \\\n",
+       "0    2016-07-30   61.0  19.0  17.0  15.0  8.0  6.0  2016      7   30   \n",
+       "1    2016-07-31   68.0  24.0  25.0  13.0  7.0  6.0  2016      7   31   \n",
+       "2    2016-08-01   60.0  20.0  26.0  14.0  2.0  6.0  2016      8    1   \n",
+       "3    2016-08-02   68.0  25.0  21.0  14.0  7.0  6.0  2016      8    2   \n",
+       "4    2016-08-03   70.0  26.0  23.0  16.0  2.0  6.0  2016      8    3   \n",
+       "...         ...    ...   ...   ...   ...  ...  ...   ...    ...  ...   \n",
+       "1675 2021-03-10   98.0  53.0  16.0  12.0  1.0  NaN  2021      3   10   \n",
+       "1676 2021-03-11  111.0  52.0  19.0  10.0  NaN  NaN  2021      3   11   \n",
+       "1677 2021-03-12  101.0  48.0  15.0   7.0  1.0  NaN  2021      3   12   \n",
+       "1678 2021-03-13   96.0  32.0   9.0   4.0  1.0  NaN  2021      3   13   \n",
+       "1679 2021-03-14   70.0   NaN   NaN   NaN  NaN  NaN  2021      3   14   \n",
        "\n",
-       "[1680 rows x 2 columns]"
+       "       day_name  \n",
+       "0      Saturday  \n",
+       "1        Sunday  \n",
+       "2        Monday  \n",
+       "3       Tuesday  \n",
+       "4     Wednesday  \n",
+       "...         ...  \n",
+       "1675  Wednesday  \n",
+       "1676   Thursday  \n",
+       "1677     Friday  \n",
+       "1678   Saturday  \n",
+       "1679     Sunday  \n",
+       "\n",
+       "[1680 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt = df[['date', y_col]]\n",
-    "dt.columns = ['ds', 'y']\n",
-    "dt"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'pm25', 'pm10', 'o3', 'no2', 'so2', 'co', 'year', 'month',\n",
+       "       'day', 'day_name'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -938,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1385,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/pnatzz/ml_learning_with_ajprasertcbs/notebooks/bangkok_air_quality_time_series.ipynb Cell 21\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pnatzz/ml_learning_with_ajprasertcbs/notebooks/bangkok_air_quality_time_series.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfbprophet\u001b[39;00m \u001b[39mimport\u001b[39;00m Prophet\n",
+      "\u001b[1;32m/Users/pnatzz/ml_learning_with_ajprasertcbs/notebooks/time_series_using_lightGBM_regressor_air_quality1.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pnatzz/ml_learning_with_ajprasertcbs/notebooks/time_series_using_lightGBM_regressor_air_quality1.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfbprophet\u001b[39;00m \u001b[39mimport\u001b[39;00m Prophet\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fbprophet'"
      ]
     }
