--- a/notebooks/pandas_SparseDtype.ipynb
+++ b/notebooks/pandas_SparseDtype.ipynb
@@ -1790,7 +1790,7 @@
     }
    ],
    "source": [
-    "# metric = ['support', 'confidence', 'lift', 'leverage', and 'conviction']\n",
+    "# There are 5 metrices here, metric = ['support', 'confidence', 'lift', 'leverage', and 'conviction']\n",
     "# rules = association_rules(frequent_itemsets, metric = \"confidence\", min_threshold = .1)\n",
     "rules = association_rules(frequent_itemsets, metric = \"support\", min_threshold = .05)\n",
     "# rules = association_rules(frequent_itemsets, metric = \"lift\", min_threshold = 1)\n",
