--- a/notebooks/pandas_dummy_variable.ipynb
+++ b/notebooks/pandas_dummy_variable.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pandas: Dummy Variable\n",
+    "### Pandas: Dummy Variable \n",
+    "- Models: applied models are sklearn: Linear Regression and Stats Models: Linear Rgression\n",
     "\n",
     "- Dataset: msleep.csv\n",
     "- Learning Date: 21-Oct-23\n",
