--- a/notebooks/jupyter_doctest_mode.ipynb
+++ b/notebooks/jupyter_doctest_mode.ipynb
@@ -214,6 +214,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 3.5, 1.4, 0.2],\n",
+       "       [4.9, 3. , 1.4, 0.2]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[:2, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -409,6 +430,297 @@
    ],
    "source": [
     "%history -t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/conda_env/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9733333333333334"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X, y = load_iris(return_X_y = True)\n",
+    "\n",
+    "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train/fit it\n",
+    "clf.predict(X[:2, :]) # predict y of X0 and X1\n",
+    "clf.predict_proba(X[:2, :])\n",
+    "clf.score(X, y) # get a score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+    "\n",
+    "# y = 1 * x_0 + 2 * x_1 + 3\n",
+    "y = np.dot(X, np.array([1, 2])) + 3\n",
+    "\n",
+    "reg = LinearRegression().fit(X, y)\n",
+    "reg.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "X, y = load_iris(return_X_y = True)\n",
+      "X\n",
+      "X.shape\n",
+      "y\n",
+      "y.shape\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial')\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial')\n",
+      "clf\n",
+      "clf.fit(X, y)\n",
+      "clf.predict(X[:2, :])\n",
+      "clf.predict_proba(X[:2, :])\n",
+      "clf.score(X, y)\n",
+      "get_ipython().run_line_magic('history', '-t')\n",
+      "X[:2, :]\n",
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "\n",
+      "X, y = load_iris(return_X_y = True)\n",
+      "\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train/fit it\n",
+      "clf.predict(X[:2, :]) # predict y of X0 and X1\n",
+      "clf.predict_proba(X[:2, :])\n",
+      "clf.score(X, y) # get a score\n",
+      "import numpy as np\n",
+      "from sklearn.linear_model import LinearRegression\n",
+      "\n",
+      "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+      "\n",
+      "# y = 1 * x_0 + 2 * x_1 + 3\n",
+      "\n",
+      "reg = LinearRegression().fit(X, y)\n",
+      "reg.score(X, y)\n",
+      "import numpy as np\n",
+      "from sklearn.linear_model import LinearRegression\n",
+      "\n",
+      "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+      "\n",
+      "# y = 1 * x_0 + 2 * x_1 + 3\n",
+      "y = np.dot(X, np.array([1, 2])) + 3\n",
+      "\n",
+      "reg = LinearRegression().fit(X, y)\n",
+      "reg.score(X, y)\n",
+      "get_ipython().run_line_magic('history', '-t')\n"
+     ]
+    }
+   ],
+   "source": [
+    "%history -t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "X, y = load_iris(return_X_y = True)\n",
+      "X\n",
+      "X.shape\n",
+      "y\n",
+      "y.shape\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial')\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial')\n",
+      "clf\n",
+      "clf.fit(X, y)\n",
+      "clf.predict(X[:2, :])\n",
+      "clf.predict_proba(X[:2, :])\n",
+      "clf.score(X, y)\n",
+      "get_ipython().run_line_magic('history', '-t')\n",
+      "X[:2, :]\n",
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "\n",
+      "X, y = load_iris(return_X_y = True)\n",
+      "\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train/fit it\n",
+      "clf.predict(X[:2, :]) # predict y of X0 and X1\n",
+      "clf.predict_proba(X[:2, :])\n",
+      "clf.score(X, y) # get a score\n",
+      "import numpy as np\n",
+      "from sklearn.linear_model import LinearRegression\n",
+      "\n",
+      "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+      "\n",
+      "# y = 1 * x_0 + 2 * x_1 + 3\n",
+      "\n",
+      "reg = LinearRegression().fit(X, y)\n",
+      "reg.score(X, y)\n",
+      "import numpy as np\n",
+      "from sklearn.linear_model import LinearRegression\n",
+      "\n",
+      "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+      "\n",
+      "# y = 1 * x_0 + 2 * x_1 + 3\n",
+      "y = np.dot(X, np.array([1, 2])) + 3\n",
+      "\n",
+      "reg = LinearRegression().fit(X, y)\n",
+      "reg.score(X, y)\n",
+      "get_ipython().run_line_magic('history', '-t')\n",
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "\n",
+      "X, y = load_iris(return_X_y = True) # X and y from datasets\n",
+      "\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train it\n",
+      "clf.predict(X[:2, :]) # predict y from x_0 and x_1\n",
+      "clf.predict_proba(X[:2, :]) \n",
+      "clf.score(X, y) # calculate score\n",
+      "\n",
+      "get_ipython().run_line_magic('history', '-t')\n",
+      "\n",
+      "from sklearn.datasets import load_iris\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "\n",
+      "X, y = load_iris(return_X_y = True) # X and y from datasets\n",
+      "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train it\n",
+      "clf.predict(X[:2, :])# predict y from x_0 and x_1\n",
+      "clf.predict_proba(X[:2, :]) \n",
+      "clf.score(X, y) # calculate score\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/conda_env/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/conda_env/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9733333333333334"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X, y = load_iris(return_X_y = True) # X and y from datasets\n",
+    "\n",
+    "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train it\n",
+    "clf.predict(X[:2, :]) # predict y from x_0 and x_1\n",
+    "clf.predict_proba(X[:2, :]) \n",
+    "clf.score(X, y) # calculate score\n",
+    "\n",
+    "get_ipython().run_line_magic('history', '-t')\n",
+    "\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X, y = load_iris(return_X_y = True) # X and y from datasets\n",
+    "clf = LogisticRegression(random_state = 0, solver = 'lbfgs', multi_class = 'multinomial').fit(X, y) # create a model and train it\n",
+    "clf.predict(X[:2, :])# predict y from x_0 and x_1\n",
+    "clf.predict_proba(X[:2, :]) \n",
+    "clf.score(X, y) # calculate score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]]) # X\n",
+    "# y = 1 * x_0 + 2 * x_1 + 3\n",
+    "y = np.dot(X, np.array([1, 2])) + 3 # y\n",
+    "reg = LinearRegression().fit(X, y) # create a model and train/fit it\n",
+    "reg.score(X, y) # get a score"
    ]
   },
   {
