--- a/notebooks/preprocessing_combine_onehot_columns.ipynb
+++ b/notebooks/preprocessing_combine_onehot_columns.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,10 +34,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x120241ca0>"
+       "<IPython.lib.display.YouTubeVideo at 0x108dedc40>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2023-09-24 14:04:24.974642')"
+       "Timestamp('2023-12-11 07:27:28.374769')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "'https://github.com/prasertcbs/basic-dataset/raw/master/MoviesOnStreamingPlatforms_updated.csv'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "2                  English      149  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 17)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,65 +309,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Inception', 'The Matrix', 'Avengers: Infinity War',\n",
-       "       'Back to the Future', 'The Good, the Bad and the Ugly',\n",
-       "       'Spider-Man: Into the Spider-Verse', 'The Pianist',\n",
-       "       'Django Unchained', 'Raiders of the Lost Ark',\n",
-       "       'Inglourious Basterds', 'Taxi Driver', '3 Idiots',\n",
-       "       \"Pan's Labyrinth\", 'Room', 'Monty Python and the Holy Grail',\n",
-       "       'Once Upon a Time in the West',\n",
-       "       'Indiana Jones and the Last Crusade', 'Groundhog Day',\n",
-       "       \"The King's Speech\", 'Her', 'There Will Be Blood',\n",
-       "       'The Social Network', 'Dallas Buyers Club',\n",
-       "       'The Perks of Being a Wallflower', 'Life of Brian', 'Ex Machina',\n",
-       "       'Silver Linings Playbook', 'District 9', 'The Irishman', 'Moon',\n",
-       "       'Marriage Story', 'Drive', 'Train to Busan', 'Incredibles 2',\n",
-       "       'Dangal', 'Klaus', 'Minority Report', 'Mystic River',\n",
-       "       'Like Stars on Earth', \"Ferris Bueller's Day Off\", 'Despicable Me',\n",
-       "       'Hell or High Water', 'Sin City', 'Ip Man',\n",
-       "       'Indiana Jones and the Temple of Doom', 'The Theory of Everything',\n",
-       "       'The Pursuit of Happyness', 'Senna', 'Scott Pilgrim vs. the World',\n",
-       "       'Magnolia', 'The Hateful Eight', 'The Artist', 'Moonlight',\n",
-       "       'Back to the Future Part II',\n",
-       "       'Willy Wonka & the Chocolate Factory',\n",
-       "       \"What's Eating Gilbert Grape\",\n",
-       "       'The Curious Case of Benjamin Button', 'A Silent Voice',\n",
-       "       'Snowpiercer', 'Hugo', 'Ant-Man and the Wasp',\n",
-       "       'As Good as It Gets', 'Back to the Future Part III',\n",
-       "       'Searching for Sugar Man', 'Road to Perdition',\n",
-       "       \"To All the Boys I've Loved Before\", \"Molly's Game\", 'Blackfish',\n",
-       "       'El Camino: A Breaking Bad Movie', 'The Invisible Guest',\n",
-       "       'Song of the Sea', 'End of Watch', 'The Evil Dead', 'About Time',\n",
-       "       'Kung Fu Hustle', 'Blue Is the Warmest Color', 'Y Tu Mamá También',\n",
-       "       'The Naked Gun: From the Files of Police Squad!', 'Mud',\n",
-       "       'The Edge of Seventeen', 'Philadelphia',\n",
-       "       'Lagaan: Once Upon a Time in India', 'Tucker and Dale vs. Evil',\n",
-       "       'The Matrix Reloaded', 'The Two Popes', 'The Last Samurai',\n",
-       "       'The Florida Project', '13th', 'Bahubali: The Beginning',\n",
-       "       'The Dawn Wall', 'Dolemite Is My Name', 'Tarzan', 'The Platform',\n",
-       "       'Okja', 'Roma', 'Saving Mr. Banks', 'Icarus',\n",
-       "       'Jiro Dreams of Sushi', 'Corpse Bride', 'Jerry Maguire'],\n",
-       "      dtype=object)"
+       "['Inception',\n",
+       " 'The Matrix',\n",
+       " 'Avengers: Infinity War',\n",
+       " 'Back to the Future',\n",
+       " 'The Good, the Bad and the Ugly',\n",
+       " 'Spider-Man: Into the Spider-Verse',\n",
+       " 'The Pianist',\n",
+       " 'Django Unchained',\n",
+       " 'Raiders of the Lost Ark',\n",
+       " 'Inglourious Basterds',\n",
+       " 'Taxi Driver',\n",
+       " '3 Idiots',\n",
+       " \"Pan's Labyrinth\",\n",
+       " 'Room',\n",
+       " 'Monty Python and the Holy Grail',\n",
+       " 'Once Upon a Time in the West',\n",
+       " 'Indiana Jones and the Last Crusade',\n",
+       " 'Groundhog Day',\n",
+       " \"The King's Speech\",\n",
+       " 'Her',\n",
+       " 'There Will Be Blood',\n",
+       " 'The Social Network',\n",
+       " 'Dallas Buyers Club',\n",
+       " 'The Perks of Being a Wallflower',\n",
+       " 'Life of Brian',\n",
+       " 'Ex Machina',\n",
+       " 'Silver Linings Playbook',\n",
+       " 'District 9',\n",
+       " 'The Irishman',\n",
+       " 'Moon',\n",
+       " 'Marriage Story',\n",
+       " 'Drive',\n",
+       " 'Train to Busan',\n",
+       " 'Incredibles 2',\n",
+       " 'Dangal',\n",
+       " 'Klaus',\n",
+       " 'Minority Report',\n",
+       " 'Mystic River',\n",
+       " 'Like Stars on Earth',\n",
+       " \"Ferris Bueller's Day Off\",\n",
+       " 'Despicable Me',\n",
+       " 'Hell or High Water',\n",
+       " 'Sin City',\n",
+       " 'Ip Man',\n",
+       " 'Indiana Jones and the Temple of Doom',\n",
+       " 'The Theory of Everything',\n",
+       " 'The Pursuit of Happyness',\n",
+       " 'Senna',\n",
+       " 'Scott Pilgrim vs. the World',\n",
+       " 'Magnolia',\n",
+       " 'The Hateful Eight',\n",
+       " 'The Artist',\n",
+       " 'Moonlight',\n",
+       " 'Back to the Future Part II',\n",
+       " 'Willy Wonka & the Chocolate Factory',\n",
+       " \"What's Eating Gilbert Grape\",\n",
+       " 'The Curious Case of Benjamin Button',\n",
+       " 'A Silent Voice',\n",
+       " 'Snowpiercer',\n",
+       " 'Hugo',\n",
+       " 'Ant-Man and the Wasp',\n",
+       " 'As Good as It Gets',\n",
+       " 'Back to the Future Part III',\n",
+       " 'Searching for Sugar Man',\n",
+       " 'Road to Perdition',\n",
+       " \"To All the Boys I've Loved Before\",\n",
+       " \"Molly's Game\",\n",
+       " 'Blackfish',\n",
+       " 'El Camino: A Breaking Bad Movie',\n",
+       " 'The Invisible Guest',\n",
+       " 'Song of the Sea',\n",
+       " 'End of Watch',\n",
+       " 'The Evil Dead',\n",
+       " 'About Time',\n",
+       " 'Kung Fu Hustle',\n",
+       " 'Blue Is the Warmest Color',\n",
+       " 'Y Tu Mamá También',\n",
+       " 'The Naked Gun: From the Files of Police Squad!',\n",
+       " 'Mud',\n",
+       " 'The Edge of Seventeen',\n",
+       " 'Philadelphia',\n",
+       " 'Lagaan: Once Upon a Time in India',\n",
+       " 'Tucker and Dale vs. Evil',\n",
+       " 'The Matrix Reloaded',\n",
+       " 'The Two Popes',\n",
+       " 'The Last Samurai',\n",
+       " 'The Florida Project',\n",
+       " '13th',\n",
+       " 'Bahubali: The Beginning',\n",
+       " 'The Dawn Wall',\n",
+       " 'Dolemite Is My Name',\n",
+       " 'Tarzan',\n",
+       " 'The Platform',\n",
+       " 'Okja',\n",
+       " 'Roma',\n",
+       " 'Saving Mr. Banks',\n",
+       " 'Icarus',\n",
+       " 'Jiro Dreams of Sushi',\n",
+       " 'Corpse Bride',\n",
+       " 'Jerry Maguire']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Title.unique()"
+    "df.Title.unique().tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.Title.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +651,7 @@
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -700,18 +801,18 @@
        "2            0        0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[:3]"
+    "df[:3] # get head 3 rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +823,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +843,7 @@
        "['Disney+', 'Hulu', 'Netflix', 'Prime Video']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +867,7 @@
        "MultiLabelBinarizer()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -790,18 +891,18 @@
        "MultiLabelBinarizer()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlb.fit([dummy_cols])"
+    "mlb.fit([dummy_cols]) # train only dummy columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +911,7 @@
        "array(['Disney+', 'Hulu', 'Netflix', 'Prime Video'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +932,7 @@
        " ('Disney+', 'Hulu', 'Netflix', 'Prime Video')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -930,50 +1031,36 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Good, the Bad and the Ugly</td>\n",
-       "      <td>1966</td>\n",
-       "      <td>18+</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>97%</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Title  Year  Age  IMDb Rotten Tomatoes  Netflix  \\\n",
-       "0                       Inception  2010  13+   8.8             87%        1   \n",
-       "1                      The Matrix  1999  18+   8.7             87%        1   \n",
-       "2          Avengers: Infinity War  2018  13+   8.5             84%        1   \n",
-       "3              Back to the Future  1985   7+   8.5             96%        1   \n",
-       "4  The Good, the Bad and the Ugly  1966  18+   8.8             97%        1   \n",
+       "                    Title  Year  Age  IMDb Rotten Tomatoes  Netflix  Hulu  \\\n",
+       "0               Inception  2010  13+   8.8             87%        1     0   \n",
+       "1              The Matrix  1999  18+   8.7             87%        1     0   \n",
+       "2  Avengers: Infinity War  2018  13+   8.5             84%        1     0   \n",
+       "3      Back to the Future  1985   7+   8.5             96%        1     0   \n",
        "\n",
-       "   Hulu  Prime Video  Disney+  \n",
-       "0     0            0        0  \n",
-       "1     0            0        0  \n",
-       "2     0            0        0  \n",
-       "3     0            0        0  \n",
-       "4     0            1        0  "
+       "   Prime Video  Disney+  \n",
+       "0            0        0  \n",
+       "1            0        0  \n",
+       "2            0        0  \n",
+       "3            0        0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1078,7 @@
        "       [0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1275,7 @@
        "9        1     0            0        0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1304,7 @@
        " ('Netflix',)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1530,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1727,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1758,7 @@
        "Name: platforms, Length: 100, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1782,7 @@
        "       [0, 0, 1, 1]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1802,7 @@
        "array(['Disney+', 'Hulu', 'Netflix', 'Prime Video'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1943,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2170,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
